--- a/song2.html
+++ b/song2.html
@@ -3,139 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>House of Prayer Christmas Songs</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<title>House of Prayer – Audio Monitor</title>
 
 <style>
-/* ===== EXISTING STYLES (unchanged) ===== */
-*{margin:0;padding:0;box-sizing:border-box}
+:root{
+  --bg:#0b1020;
+  --panel:#16213e;
+  --accent:#e94560;
+  --text:#ffffff;
+  --muted:#9aa4b2;
+}
+
+*{box-sizing:border-box}
+
 body{
-  font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;
-  background:#1a1a2e;color:#fff;
-  display:flex;justify-content:center;
-  padding:20px;margin:15px
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:var(--bg);
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  color:var(--text);
 }
-.player-container{
-  background:#16213e;border-radius:16px;
-  border:1.5px dashed white;
-  width:100%;max-width:600px;
-  padding:24px;box-shadow:0 8px 32px rgba(0,0,0,.4)
+
+.player{
+  width:100%;
+  max-width:420px;
+  background:var(--panel);
+  border-radius:18px;
+  padding:24px;
+  box-shadow:0 20px 60px rgba(0,0,0,.5);
 }
-.tabs{display:flex;gap:8px;padding:.5rem;border:1.5px dashed white;border-radius:1rem;margin-bottom:24px}
-.tab{
-  flex:1;padding:10px;background:#0f1624;border:none;border-radius:8px;
-  color:#7f8c9f;font-size:16px;min-height:44px;
-  display:flex;align-items:center;justify-content:center;gap:6px
+
+/* Header */
+.header{
+  text-align:center;
+  margin-bottom:18px;
 }
-.tab.active{background:#e94560;color:#fff}
-.playlist{max-height:300px;overflow-y:auto;border:1.5px dashed white;border-radius:1rem;margin-bottom:24px}
-.track{display:flex;align-items:center;padding:12px;border-radius:8px;cursor:pointer}
-.track.active{background:rgba(233,69,96,.2)}
-.track-num{width:24px;height:24px;background:#0f1624;border-radius:6px;display:flex;align-items:center;justify-content:center;margin-right:12px}
-.track.active .track-num{background:#e94560}
-.track-name{font-size:16px}
+.header h1{
+  font-size:1.1rem;
+  margin:0;
+}
+.header p{
+  margin:6px 0 0;
+  font-size:.85rem;
+  color:var(--muted);
+}
 
-.now-playing{text-align:center;margin-bottom:12px}
-.now-playing-title{font-size:18px}
-.now-playing-type{font-size:14px;color:#7f8c9f}
-
-.progress-bar{height:6px;background:#0f1624;border-radius:3px;margin-bottom:6px}
-.progress{height:100%;background:#e94560;width:0%}
-
-.time{display:flex;justify-content:space-between;font-size:14px;color:#7f8c9f;margin-bottom:12px}
-
-.buttons{display:flex;justify-content:center;gap:20px;margin-bottom:16px}
-.btn{background:none;border:none;color:#fff;font-size:28px;min-width:52px;min-height:52px}
-.btn-play{width:60px;height:60px;background:#e94560;border-radius:50%}
-
-.volume-control{display:flex;align-items:center;gap:12px}
-.volume-slider{flex:1;height:6px;background:#0f1624;border-radius:3px}
-
-/* ===== 🔥 NEW: EQUALIZER STYLES ===== */
+/* Equalizer */
 .equalizer{
   display:flex;
   justify-content:center;
-  gap:4px;
-  height:40px;
-  margin:12px 0;
+  align-items:flex-end;
+  gap:6px;
+  height:70px;
+  margin:20px 0;
 }
 .eq-bar{
-  width:6px;
-  background:#e94560;
-  border-radius:4px 4px 0 0;
-  height:20%;
-  transition:height .08s linear;
+  width:8px;
+  height:12%;
+  background:var(--accent);
+  border-radius:6px 6px 0 0;
+  transition:height .07s linear;
+}
+
+/* Controls */
+.controls{
+  display:flex;
+  justify-content:center;
+  margin-top:10px;
+}
+.play-btn{
+  width:64px;
+  height:64px;
+  border-radius:50%;
+  border:none;
+  background:var(--accent);
+  color:#fff;
+  font-size:1.5rem;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+}
+
+/* Footer */
+.footer{
+  text-align:center;
+  margin-top:18px;
+  font-size:.75rem;
+  color:var(--muted);
 }
 </style>
 </head>
 
 <body>
 
-<div class="player-container">
-
-  <div class="tabs">
-    <button class="tab active" onclick="switchTab('audio')"><i class="fas fa-music"></i> Audio</button>
-    <button class="tab" onclick="switchTab('tracks')"><i class="fas fa-list"></i> Tracks</button>
+<div class="player">
+  <div class="header">
+    <h1>Audio Monitor</h1>
+    <p>House of Prayer · Live Signal</p>
   </div>
 
-  <div class="playlist" id="audioList"></div>
-  <div class="playlist hidden" id="tracksList"></div>
+  <div class="equalizer" id="equalizer">
+    <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+    <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+    <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+    <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+  </div>
 
   <div class="controls">
+    <button class="play-btn" id="playBtn">▶</button>
+  </div>
 
-    <div class="now-playing">
-      <div class="now-playing-title" id="nowPlaying">Select a song</div>
-      <div class="now-playing-type" id="nowPlayingType">—</div>
-    </div>
-
-    <!-- 🔥 NEW: EQUALIZER HTML -->
-    <div class="equalizer" id="equalizer">
-      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
-      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
-      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
-      <div class="eq-bar"></div>
-    </div>
-
-    <div class="progress-bar"><div class="progress" id="progress"></div></div>
-
-    <div class="time">
-      <span id="currentTime">0:00</span>
-      <span id="duration">0:00</span>
-    </div>
-
-    <div class="buttons">
-      <button class="btn" onclick="prev()"><i class="fas fa-step-backward"></i></button>
-      <button class="btn btn-play" onclick="toggle()"><i class="fas fa-play" id="playIcon"></i></button>
-      <button class="btn" onclick="next()"><i class="fas fa-step-forward"></i></button>
-    </div>
-
-    <div class="volume-control">
-      <i class="fas fa-volume-up"></i>
-      <input type="range" class="volume-slider" min="0" max="100" value="80" oninput="setVolume(this.value)">
-    </div>
-
+  <div class="footer">
+    Signal visualization only · No processing
   </div>
 </div>
 
-<audio id="audio"></audio>
+<audio id="audio" src="https://pub-43e3b530db1540f4a16cdacc0e749843.r2.dev/temp-audios/%E0%B0%85%E0%B0%82%E0%B0%A6%E0%B0%BE%E0%B0%B2%20%E0%B0%A4%E0%B0%BE%E0%B0%B0_Audio.mp3"></audio>
 
 <script>
-/* ===== AUDIO + EQUALIZER LOGIC ===== */
-const audio = document.getElementById('audio');
-const eqBars = document.querySelectorAll('.eq-bar');
+const audio = document.getElementById("audio");
+const playBtn = document.getElementById("playBtn");
+const bars = document.querySelectorAll(".eq-bar");
 
-let audioCtx, analyser, source, dataArray;
-let eqRunning = false;
+let audioCtx, analyser, dataArray, source;
+let playing = false;
 
-function initEQ() {
-  if (audioCtx) return; // already initialized
+function initAudio(){
+  if(audioCtx) return;
 
   const AudioContext = window.AudioContext || window.webkitAudioContext;
   audioCtx = new AudioContext();
 
   source = audioCtx.createMediaElementSource(audio);
   analyser = audioCtx.createAnalyser();
-  analyser.fftSize = 64;
+  analyser.fftSize = 128;
 
   source.connect(analyser);
   analyser.connect(audioCtx.destination);
@@ -143,74 +148,33 @@ function initEQ() {
   dataArray = new Uint8Array(analyser.frequencyBinCount);
 }
 
-function animateEQ() {
-  if (!analyser) return;
+function animateEQ(){
+  if(!analyser) return;
 
   analyser.getByteFrequencyData(dataArray);
-  eqBars.forEach((bar, i) => {
+  bars.forEach((bar,i)=>{
     const v = dataArray[i] || 0;
-    bar.style.height = Math.max(10, v / 2) + '%';
+    bar.style.height = Math.max(10, v / 2) + "%";
   });
 
   requestAnimationFrame(animateEQ);
 }
 
-/* ===== YOUR EXISTING PLAYER LOGIC ===== */
-let playing=false,current=0,activeTab='audio';
+playBtn.addEventListener("click", async ()=>{
+  initAudio();
+  await audioCtx.resume();
 
-const data={
-  audio:[
-    {name:'అందాల తార',url:'https://pub-43e3b530db1540f4a16cdacc0e749843.r2.dev/temp-audios/%E0%B0%85%E0%B0%82%E0%B0%A6%E0%B0%BE%E0%B0%B2%20%E0%B0%A4%E0%B0%BE%E0%B0%B0_Audio.mp3'},
-    {name:'జన్మించినాడు శ్రీ యేసు',url:'https://pub-43e3b530db1540f4a16cdacc0e749843.r2.dev/temp-audios/%E0%B0%85%E0%B0%82%E0%B0%A6%E0%B0%BE%E0%B0%B2%20%E0%B0%A4%E0%B0%BE%E0%B0%B0_Audio.mp3'}
-  ],
-  tracks:[
-    {name:'అందాల తార',url:'YOUR_TRACK_URL_1'},
-    {name:'జన్మించినాడు శ్రీ యేసు',url:'YOUR_TRACK_URL_2'}
-  ]
-};
-
-function render(){
-  audioList.innerHTML=data.audio.map((t,i)=>trackHTML(t,i,'audio')).join('');
-  tracksList.innerHTML=data.tracks.map((t,i)=>trackHTML(t,i,'tracks')).join('');
-}
-function trackHTML(t,i,type){
-  return `<div class="track" onclick="play(${i},'${type}')">
-    <div class="track-num">${i+1}</div>
-    <div class="track-name">${t.name}</div>
-  </div>`;
-}
-function play(i, tab) {
-  current = i;
-  activeTab = tab;
-
-  initEQ();               // 🔥 initialize EQ
-  audioCtx.resume();      // 🔥 unlock audio context
-
-  audio.src = data[tab][i].url;
-  audio.play();
-  playing = true;
-
-  if (!eqRunning) {
-    animateEQ();          // 🔥 start animation once
-    eqRunning = true;
+  if(!playing){
+    audio.play();
+    playBtn.textContent = "⏸";
+    playing = true;
+    animateEQ();
+  }else{
+    audio.pause();
+    playBtn.textContent = "▶";
+    playing = false;
   }
-
-  playIcon.className = 'fas fa-pause';
-  nowPlaying.textContent = data[tab][i].name;
-  nowPlayingType.textContent = tab;
-                                                        }
-function toggle(){
-  if(!audio.src)return;
-  playing?audio.pause():audio.play();
-  playing=!playing;
-  playIcon.className=playing?'fas fa-pause':'fas fa-play';
-}
-function prev(){if(current>0)play(current-1,activeTab)}
-function next(){if(current<data[activeTab].length-1)play(current+1,activeTab)}
-function setVolume(v){audio.volume=v/100}
-
-render();
-audio.volume=.8;
+});
 </script>
 
 </body>
